created details page + form submit

--- a/frontend/reviews-react/src/index.css
+++ b/frontend/reviews-react/src/index.css
@@ -11,6 +11,10 @@ body {
   background-color: rgb(245 245 244); /* bg-stone-100 */
 }
 
+textarea {
+  resize: none;
+}
+
 @theme inline {
   --radius-sm: calc(var(--radius) - 4px);
   --radius-md: calc(var(--radius) - 2px);
